# ApexOS-RS

./: .gitignore  ACTIONPLAN-FOLLOWUP.md  ACTIONPLAN-REPORT.md  AGENTS.md  AUDIT-ACTIONPLAN.md  AUDIT-PLAN.md  BACKLOG.md  CLAUDE.md  Cargo.toml  LICENSE  PATTERNS.md  README.md  REVIEW.md  SECURITY.md  install.sh
.claude/workflows/: docs-hygiene-audit.js
agentd/crates/agent/: Cargo.toml  README.md
agentd/crates/agent/src/: anthropic.rs  cache.rs  council.rs  lib.rs  oai.rs  provider.rs  routing.rs  turn.rs  usage.rs
agentd/crates/agentd/: Cargo.toml  README.md  build.rs
agentd/crates/agentd/src/: consolidate.rs  council_handler.rs  dream_digest.rs  evolution.rs  goal.rs  health.rs  main.rs  pac_lint.rs  rehearse.rs  scheduler.rs  self_update.rs  sensor_config.rs  session_store.rs
agentd/crates/core/: Cargo.toml  README.md
agentd/crates/core/src/: bus.rs  history.rs  identity.rs  lib.rs  persona.rs  state.rs  types.rs  vision.rs
agentd/crates/gateway/: Cargo.toml  README.md
agentd/crates/gateway/src/: backend_config.rs  beacon.rs  compute.rs  lib.rs  mesh.rs  session_auth.rs
agentd/crates/gateway/tests/: echo.rs
agentd/crates/plugins/: Cargo.toml  README.md
agentd/crates/plugins/src/: config.rs  lib.rs  mcp.rs  policy.rs  supervisor.rs  vast.rs
agentd/crates/plugins/tests/: mcp_client.rs
agentd/crates/store/: Cargo.toml  README.md
agentd/crates/store/src/: lib.rs
apexos-confine/: Cargo.toml  README.md
apexos-confine/src/: lib.rs
apexos-confine/tests/: redteam.rs
apexos-protocol/: README.md
apexos-protocol/src/: lib.rs
assets/: README.md
cerebro/crates/cerebro/: Cargo.toml  README.md
cerebro/crates/cerebro-api/: Cargo.toml  README.md
cerebro/crates/cerebro-api/src/: main.rs
cerebro/crates/cerebro-cli/: Cargo.toml  README.md
cerebro/crates/cerebro-cli/src/: main.rs
cerebro/crates/cerebro-mcp/: Cargo.toml  README.md
cerebro/crates/cerebro-mcp/src/: dispatch.rs  main.rs  tools.rs  transport.rs
cerebro/crates/cerebro/benches/: activation_bench.rs
cerebro/crates/cerebro/src/: config.rs  cortex.rs  lib.rs  types.rs  vision.rs
cerebro/crates/cerebro/src/activation/: actr.rs  fsrs.rs  mod.rs  spreading.rs
cerebro/crates/cerebro/src/engines/: amygdala.rs  association.rs  cerebellum.rs  dream.rs  hippocampus.rs  mod.rs  neocortex.rs  prefrontal.rs  temporal.rs  thalamus.rs
cerebro/crates/cerebro/src/models/: agent.rs  episode.rs  link.rs  memory.rs  mod.rs
cerebro/crates/cerebro/src/storage/: graph.rs  mod.rs  sqlite.rs  vector.rs
cerebro/crates/cerebro/tests/: integration_test.rs
cerebro/crates/cerebro/tests/fixtures/: activation.json
config/: plugins.toml  policy.toml  soul.md
config/parts/: README.md  catalog.toml  inventory.toml
deploy/: agentd.service  apex-sensor-bridge.service  apex-stt.service  apex-tts.service  apexos-provision-selfupdate.sh  apexos-rollback.service  apexos-rollback.sh  apexos-rs-ui.desktop  apexos-rs-ui.service  apexos-self-update-drill.sh  apexos-self-update.path  apexos-self-update.service  apexos-self-update.sh  cerebro-api.service
deploy/avahi/: apexos-rs.service
deploy/sudoers.d/: apexos-usb
deploy/systemd/: apexos-usb-eject.path  apexos-usb-eject.service  apexos-usb-mount@.service  apexos-usb-prep.path  apexos-usb-prep.service
deploy/udev/: 99-apexos-usb.rules
deploy/usb/: apexos-workspace-init  usb-eject-drain  usb-mount  usb-prep  usb-prep-drain  usb-umount
docs/: adaptive-ui.md  agent-identity.md  agentd-protocol.md  app-parity.md  architecture.md  build-roadmap.md  cerebro-audit-phaseB.md  colony-federation.md  colony-mesh.md  edk.md  env-vars.md  evolutionary-layer.md  gotchas.md  model-welfare.md  occipital.md  pac.md  porting-guide.md  post-mk1.md  prompt-caching.md  repo-map.md  self-update.md  slint-notes.md  symbiosis.md  ui-glowup.md  usb-workspace.md  voice.md  web-ui.md
docs/ideas/: goal-driver-design.md  state-machine-eval.md  state-machine.md
docs/pac-bench/: README.md  RESULTS.md  pac2lint.py  run.py
docs/sdk/: 01-core-and-protocol.md  02-mcp-plugins.md  03-adding-tools.md  04-cerebro-for-agents.md  05-desktop-apps.md  06-self-evolution-and-policy.md  (+6 more)
tools/crates/apex-sensor-bridge/: Cargo.toml  README.md
tools/crates/apex-sensor-bridge/src/: main.rs
tools/crates/apex-stt/: Cargo.toml
tools/crates/apex-stt/src/: main.rs
tools/crates/apex-tts/: Cargo.toml
tools/crates/apex-tts/src/: main.rs
ui-slint/: Cargo.toml  README.md
ui-slint/src/: face_gl.rs  main.rs
ui-slint/src/ui/: appwindow.slint  palette.slint  personas.slint  types.slint
ui-slint/src/ui/components/: app_window_frame.slint  audio_editor_view.slint  calculator_view.slint  chat_view.slint  council_view.slint  dashboard.slint  dock.slint  event_log_view.slint  explorer_view.slint  face_view.slint  identity_wizard.slint  image_picker.slint  inference_view.slint  input_bar.slint  mesh_view.slint  message_bubble.slint  notes_view.slint  notif_center.slint  occipital_view.slint  persona_picker.slint  sensor_view.slint  session_view.slint  settings_view.slint  sketchpad_view.slint  sonus_view.slint  start_menu.slint  taskbar.slint  terminal_view.slint  toast.slint  tool_card.slint  web_view.slint  win98.slint  work_board.slint
web/: app.js  index.html  manifest.json  style.css  sw.js
world/: .gitignore  Cargo.toml  README.md
world/crates/world-app/: Cargo.toml  README.md  build.rs
world/crates/world-app/src/: main.rs  stations.rs  world.rs
world/crates/world-app/ui/: hud.slint
world/crates/world-protocol/: Cargo.toml
world/crates/world-protocol/src/: client.rs  events.rs  ids.rs  intents.rs  lib.rs
world/crates/world-vision/: Cargo.toml  README.md
world/crates/world-vision/config/: plugins.snippet.toml
world/crates/world-vision/src/: dispatch.rs  main.rs  snapshot_client.rs  tools.rs  transport.rs
world/docs/: DESIGN.md
world/docs/design/: 01-world-and-interaction.md  02-agentd-integration.md  03-rendering-architecture.md  04-agent-embodiment-and-vision.md  05-station-and-app-system.md  06-roadmap-and-scaffold-plan.md  critique-agentd.md  critique-rendering.md
(+12 files in other folders)
