[package]
name = "ui-slint"
version = "0.1.0"
edition = "2021"
description = "ApexOS-RS native UI — Slint frontend over agentd WebSocket"

[dependencies]
# Shared wire-protocol types — deserialize WS frames into the SAME Event enum
# agentd serializes from (kills the hand-rolled string-matching / silent drops).
apexos-protocol = { path = "../apexos-protocol" }
slint = { version = "1", features = ["backend-linuxkms-noseat", "backend-winit"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"], default-features = false }
chrono = { workspace = true }
image = { workspace = true }
# Phase-2 face spike (proto/face-gl-spike): raw GL via Slint's rendering notifier
# (femtovg NativeOpenGL). Version matches femtovg's own glow → no duplicate build.
# Env-gated (APEX_FACE_GL=1); dormant otherwise.
glow = "0.17"
# Surfaces Slint/femtovg/linuxkms backend `log` output to the journal (defaults to
# warn) so GL/DRM faults are captured instead of vanishing into a silent exit.
env_logger = "0.11"
# Client-side mic capture: SIGINT the local arecord on stop so it finalizes the WAV
# header cleanly (Child::kill would SIGKILL → truncated header).
libc = "0.2"

[build-dependencies]
slint-build = "1"
