[package]
name    = "apexos-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
apexos-core  = { path = "../core" }
tokio        = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
futures-util = { workspace = true }
reqwest      = { version = "0.12", features = ["json", "stream"] }
async-trait  = "0.1"
async-stream = "0.3"
futures-core = "0.3"
bytes        = "1"
