[package]
name = "agentd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentd"
path = "src/main.rs"

[dependencies]
apexos-core    = { path = "../core" }
apexos-gateway = { path = "../gateway" }
apexos-plugins = { path = "../plugins" }
apexos-agent   = { path = "../agent" }
apexos-store   = { path = "../store" }
tokio          = { workspace = true }
anyhow         = { workspace = true }
serde_json     = { workspace = true }
serde          = { workspace = true }
toml_edit      = "0.22"
cron           = "0.12"
chrono         = "0.4"
futures-util   = { workspace = true }   # StreamExt for the self-update review gate's LLM call
