[package]
name = "apexos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
apexos-protocol = { path = "../../../apexos-protocol" }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
image      = { workspace = true }
base64     = { workspace = true }
