[package]
name = "apexos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
apexos-protocol = { path = "../../../apexos-protocol" }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
image      = { workspace = true }
base64     = { workspace = true }
# Identity store (docs/agent-identity.md): toml persistence + PIN hashing.
toml       = "0.8"
sha2       = { workspace = true }
subtle     = { workspace = true }
rand       = { workspace = true }
