[package]
name = "apexos-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
apexos-core    = { path = "../core" }
apexos-plugins = { path = "../plugins" }
axum         = { version = "0.8", features = ["ws"] }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
futures-util = { workspace = true }
anyhow       = { workspace = true }
libc         = "0.2"
reqwest      = { version = "0.12", features = ["json"] }
chrono       = { version = "0.4", default-features = false, features = ["clock", "std"] }
toml         = "0.8"

[dev-dependencies]
tokio-tungstenite = "0.26"
tungstenite       = "0.26"
