[package]
name = "apexos-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
apexos-core    = { path = "../core" }
apexos-confine = { path = "../../../apexos-confine" }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
toml         = "0.8"
chrono       = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
