[package]
name    = "apexos-store"
version = "0.1.0"
edition = "2021"

[dependencies]
apexos-core = { path = "../core" }
serde_json  = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
chrono      = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"
