[package]
name        = "cerebro-api"
description = "CerebroCortex axum REST API + dashboard"
version.workspace = true
edition     = "2021"
license.workspace = true

[[bin]]
name = "cerebro-api"
path = "src/main.rs"

[dependencies]
cerebro          = { path = "../cerebro" }
tokio.workspace  = true
axum.workspace   = true
tower.workspace  = true
serde        = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace  = true
uuid.workspace    = true
subtle.workspace  = true
