[package]
name        = "cerebro-mcp"
description = "CerebroCortex MCP-over-stdio server (63 tools)"
version.workspace = true
edition     = "2021"
license.workspace = true

[[bin]]
name = "cerebro-mcp"
path = "src/main.rs"

[dependencies]
cerebro          = { path = "../cerebro" }
tokio.workspace  = true
serde.workspace  = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace   = true

[dev-dependencies]
tempfile.workspace = true
