[package]
name = "apex-sensor-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apex-sensor-bridge"
path = "src/main.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tungstenite = "0.26"
reqwest     = { version = "0.12", features = ["blocking"] }
