[package]
name = "world-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "agentd Event/Intent wire mirror + typed WebSocket client for apexos-world. LIGHT deps, no GPU — the CI-green crate."

# Dependency discipline (DESIGN.md §2, D5): this crate is the wire boundary and the
# future "agentd client SDK". It MUST stay heavy-dep-free so it `cargo check`s and
# `cargo test`s on a headless box with no GPU/X/fontconfig. NO bevy/slint/wgpu/image.
[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
